fix(styles.css): font scoring color and alignment fix

--- a/week-09/redditFullStack/assets/styles.css
+++ b/week-09/redditFullStack/assets/styles.css
@@ -67,10 +67,12 @@ aside {
 }
 
 .post-score {
-	color: #000000;
+	color: #bbbbbb;
+	font-size: 18px;
+	font-weight: bold;
 	height: 20px;
 	padding-top: 5px;
-	width: 10%;
+	text-align: center;
 }
 
 .post-section {
